--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body>
+<body class="page">
+@include('partials/header.html')
   <h1>dddddddddaaaa</h1>
 
   <script src="js/vendor.js"></script>
