--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,12 @@
 </head>
 
 <body class="page">
-@include('partials/header.html')
-  <h1>dddddddddaaaa</h1>
+  @include('partials/header.html')
+  <main>
+    <h1 class="visually-hidden">Роллер-школа Simferopol Rollers</h1>
+    @include('partials/about.html')
+    @include('partials/age.html')
+  </main>
 
   <script src="js/vendor.js"></script>
   <script src="js/main.js"></script>
